--- a/index.html
+++ b/index.html
@@ -2,9 +2,133 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>JaysModels</title>
+  
+  <link href="styles/global.css" rel="stylesheet"/>
+  <link href="styles/header.css" rel="stylesheet"/>
+  <link href="styles/dark.css" rel="stylesheet"/>
 </head>
 <body>
+<!-- ============================================ -->
+<!--                 Navigation                   -->
+<!-- ============================================ -->
 
+<header id="cs-navigation">
+  <div class="cs-container">
+    <!--Nav Logo-->
+    <!--Logo is turned white in the css with a filter on dark mode-->
+    <a aria-label="back to home" class="cs-logo" href="">
+      <img alt="logo" aria-hidden="true" decoding="async"
+           height="29" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/day-care.svg" width="210">
+    </a>
+    <!--Navigation List-->
+    <nav class="cs-nav" role="navigation">
+      <!--Mobile Nav Toggle-->
+      <button aria-label="mobile menu toggle" class="cs-toggle">
+        <div aria-hidden="true" class="cs-box">
+          <span aria-hidden="true" class="cs-line cs-line1"></span>
+          <span aria-hidden="true" class="cs-line cs-line2"></span>
+          <span aria-hidden="true" class="cs-line cs-line3"></span>
+        </div>
+      </button>
+      <!-- We need a wrapper div so we can set a fixed height on the cs-ul in case the nav list gets too long from too many dropdowns being opened and needs to have an overflow scroll. This wrapper acts as the background so it can go the full height of the screen and not cut off any overflowing nav items while the cs-ul stops short of the bottom of the screen, which keeps all nav items in view no matter how mnay there are-->
+      <div class="cs-ul-wrapper">
+        <ul aria-expanded="false" class="cs-ul" id="cs-expanded">
+          <li class="cs-li">
+            <a class="cs-li-link cs-active" href="">
+              Home
+            </a>
+          </li>
+          <!--Copy and paste this cs-dropdown list item and replace any .cs-li with this cs-dropdown group to make a new dropdown and it will work-->
+          <li class="cs-li cs-dropdown" tabindex="0">
+                        <span class="cs-li-link">
+                           About
+                            <img alt="dropdown icon"
+                                 aria-hidden="true"
+                                 class="cs-drop-icon" decoding="async" height="15"
+                                 src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/down-gold.svg" width="15">
+                        </span>
+            <ul class="cs-drop-ul">
+              <li class="cs-drop-li">
+                <a class="cs-li-link cs-drop-link" href="">About1</a>
+              </li>
+              <li class="cs-drop-li">
+                <a class="cs-li-link cs-drop-link" href="">About2</a>
+              </li>
+            </ul>
+          </li>
+          <!--Copy and paste this cs-dropdown list item and replace any .cs-li with this cs-dropdown group to make a new dropdown and it will work-->
+          <li class="cs-li cs-dropdown" tabindex="0">
+                        <span class="cs-li-link">
+                            Services
+                            <img alt="dropdown icon"
+                                 aria-hidden="true"
+                                 class="cs-drop-icon" decoding="async" height="15"
+                                 src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/down-gold.svg" width="15">
+                        </span>
+            <ul class="cs-drop-ul">
+              <li class="cs-drop-li">
+                <a class="cs-li-link cs-drop-link" href="">Registration</a>
+              </li>
+              <li class="cs-drop-li">
+                <a class="cs-li-link cs-drop-link" href="">Our Classes</a>
+              </li>
+            </ul>
+          </li>
+          <li class="cs-li">
+            <a class="cs-li-link" href="">
+              Blog
+            </a>
+          </li>
+          <li class="cs-li">
+            <a class="cs-li-link" href="">
+              Contact
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="cs-contact-group">
+      <a class="cs-phone" href="tel:+84 1985 33 999">
+        <img alt="logo" aria-hidden="true" class="cs-phone-icon"
+             decoding="async" height="24" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/phone-1a.svg"
+             width="24">
+        +84 1985 33 999
+      </a>
+      <div class="cs-social">
+        <a class="cs-social-link" href="">
+          <img alt="logo" aria-hidden="true"
+               class="cs-social-icon" decoding="async" height="12"
+               src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/facebook-1a.svg" width="12">
+        </a>
+        <a class="cs-social-link" href="">
+          <img alt="logo" aria-hidden="true"
+               class="cs-social-icon" decoding="async" height="12"
+               src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/twitter-1a.svg" width="12">
+        </a>
+        <a class="cs-social-link" href="">
+          <img alt="logo" aria-hidden="true"
+               class="cs-social-icon" decoding="async" height="12"
+               src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/instagram1a.svg" width="12">
+        </a>
+        <a class="cs-social-link" href="">
+          <img alt="logo" aria-hidden="true"
+               class="cs-social-icon" decoding="async" height="12"
+               src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/youtube1a.svg" width="12">
+        </a>
+      </div>
+    </div>
+    <!--    Dark Mode toggle, uncomment button code if you want to enable a dark mode toggle-->
+    <button aria-label="dark mode toggle" id="dark-mode-toggle">
+      <svg class="cs-moon" style="enable-background:new 0 0 480 480" viewBox="0 0 480 480"
+           xml:space="preserve" xmlns="http://www.w3.org/2000/svg"><path d="M459.782 347.328c-4.288-5.28-11.488-7.232-17.824-4.96-17.76 6.368-37.024 9.632-57.312 9.632-97.056 0-176-78.976-176-176 0-58.4 28.832-112.768 77.12-145.472 5.472-3.712 8.096-10.4 6.624-16.832S285.638 2.4 279.078 1.44C271.59.352 264.134 0 256.646 0c-132.352 0-240 107.648-240 240s107.648 240 240 240c84 0 160.416-42.688 204.352-114.176 3.552-5.792 3.04-13.184-1.216-18.496z"/></svg>
+      <img alt="moon" aria-hidden="true" class="cs-sun"
+           decoding="async" height="15" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fsun.svg" width="15">
+    </button>
+  </div>
+</header>
+
+<script src="javascript/header.js"></script>
+<script src="javascript/dark.js"></script>
 </body>
 </html>
