--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--Logo is turned white in the css with a filter on dark mode-->
     <a aria-label="back to home" class="cs-logo" href="">
       <img alt="logo" aria-hidden="true" decoding="async"
-           height="29" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/day-care.svg" width="210">
+           height="29" src="images/JaysModels-logo.png.webp" width="210">
     </a>
     <!--Navigation List-->
     <nav class="cs-nav" role="navigation">
@@ -120,10 +120,12 @@
     </div>
     <!--    Dark Mode toggle, uncomment button code if you want to enable a dark mode toggle-->
     <button aria-label="dark mode toggle" id="dark-mode-toggle">
-      <svg class="cs-moon" style="enable-background:new 0 0 480 480" viewBox="0 0 480 480"
-           xml:space="preserve" xmlns="http://www.w3.org/2000/svg"><path d="M459.782 347.328c-4.288-5.28-11.488-7.232-17.824-4.96-17.76 6.368-37.024 9.632-57.312 9.632-97.056 0-176-78.976-176-176 0-58.4 28.832-112.768 77.12-145.472 5.472-3.712 8.096-10.4 6.624-16.832S285.638 2.4 279.078 1.44C271.59.352 264.134 0 256.646 0c-132.352 0-240 107.648-240 240s107.648 240 240 240c84 0 160.416-42.688 204.352-114.176 3.552-5.792 3.04-13.184-1.216-18.496z"/></svg>
-      <img alt="moon" aria-hidden="true" class="cs-sun"
-           decoding="async" height="15" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fsun.svg" width="15">
+      <!--      <svg class="cs-moon" style="enable-background:new 0 0 480 480" viewBox="0 0 480 480"-->
+      <!--           xml:space="preserve" xmlns="http://www.w3.org/2000/svg"><path d="M459.782 347.328c-4.288-5.28-11.488-7.232-17.824-4.96-17.76 6.368-37.024 9.632-57.312 9.632-97.056 0-176-78.976-176-176 0-58.4 28.832-112.768 77.12-145.472 5.472-3.712 8.096-10.4 6.624-16.832S285.638 2.4 279.078 1.44C271.59.352 264.134 0 256.646 0c-132.352 0-240 107.648-240 240s107.648 240 240 240c84 0 160.416-42.688 204.352-114.176 3.552-5.792 3.04-13.184-1.216-18.496z"/></svg>-->
+      <img alt="moon" aria-hidden="true" class="cs-moon"
+           decoding="async" height="15" src="images/nights_stay_20dp.png" width="15">
+      <img alt="sun" aria-hidden="true" class="cs-sun"
+           decoding="async" height="15" src="images/light_mode_20dp.png" width="15">
     </button>
   </div>
 </header>
