Moved hero down 100px

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   <picture class="cs-background">
     <source media="(max-width: 600px)" srcset="images/chevrolet-camaro.jpg">
     <source media="(min-width: 601px)" srcset="images/chevrolet-camaro.jpg">
-    <img alt="kitchen" aria-hidden="true" decoding="async" height="1500"
+    <img alt="chevrolet camaro" aria-hidden="true" decoding="async" height="1500"
          src="images/chevrolet-camaro.jpg" width="2250">
   </picture>
 </section>
