Added initial side by side reverse

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="styles/header.css" rel="stylesheet"/>
   <link href="styles/dark.css" rel="stylesheet"/>
   <link href="styles/hero.css" rel="stylesheet"/>
+  <link href="styles/sbsr_hero.css" rel="stylesheet"/>
   
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
@@ -141,6 +142,52 @@
     <img alt="chevrolet camaro" aria-hidden="true" decoding="async" height="1500"
          src="images/chevrolet-camaro.jpg" width="2250">
   </picture>
+</section>
+
+<!-- ============================================ -->
+<!--             Side By Side Reverse             -->
+<!-- ============================================ -->
+
+<section id="sbsr-1810">
+  <div class="cs-container">
+    <div class="cs-image-group">
+      <!--Main Image-->
+      <picture class="cs-picture">
+        <!--Mobile Image-->
+        <source media="(max-width: 600px)"
+                srcset="images/excavator.png">
+        <!--Tablet and above Image-->
+        <source media="(min-width: 601px)"
+                srcset="images/excavator.png">
+        <img alt="body builder" decoding="async" height="568"
+             loading="lazy" src="images/excavator.png" width="562">
+      </picture>
+      <!--Pink Blob-->
+      <img alt="red splatter" class="cs-splatter" decoding="async"
+           height="478" loading="lazy"
+           src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/flipped-red.svg" width="441">
+    </div>
+    <div class="cs-content">
+      <span class="cs-topper">About Us</span>
+      <h2 class="cs-title">We Are Pushing The Limit Of Your Core Strength</h2>
+      <p class="cs-text">
+        We understand that your lifestyle changes, that’s why we’ve made fitness straightforward and stress free. Join
+        today on a no lock-in contract membership and start achieving your fitness goals. We value flexibility at Jetts,
+        with unlimited 24/7 access.
+      </p>
+      <a aria-label="learn more about us" class="cs-button-solid" href="">Learn More</a>
+    </div>
+  </div>
+  
+  <!--White Splash Graphic-->
+  <img alt="graphic" class="cs-graphic cs-light"
+       decoding="async" height="161" loading="lazy"
+       src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/f7-splatter.svg" width="1920">
+  <!--This is a dark version. Download the image and change the fill color to match the color of the section background below it-->
+  <img alt="graphic"
+       class="cs-graphic cs-dark" decoding="async"
+       height="161" loading="lazy"
+       src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/dark-mode-splatter2.svg" width="1920">
 </section>
 
 
