Added initial gallery

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="styles/dark.css" rel="stylesheet"/>
   <link href="styles/hero.css" rel="stylesheet"/>
   <link href="styles/sbsr_hero.css" rel="stylesheet"/>
+  <link href="styles/new_additions_gallery.css" rel="stylesheet"/>
   
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
@@ -168,12 +169,11 @@
            src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/flipped-red.svg" width="441">
     </div>
     <div class="cs-content">
-      <span class="cs-topper">About Us</span>
-      <h2 class="cs-title">We Are Pushing The Limit Of Your Core Strength</h2>
+      <span class="cs-topper">Model of the day</span>
+      <h2 class="cs-title">Where Power Meets Perfection</h2>
       <p class="cs-text">
-        We understand that your lifestyle changes, that’s why we’ve made fitness straightforward and stress free. Join
-        today on a no lock-in contract membership and start achieving your fitness goals. We value flexibility at Jetts,
-        with unlimited 24/7 access.
+        Meticulously crafted to replicate the awe-inspiring power and precision. Have the Hitachi Hydraulic Excavator
+        delivered to your doorsteps today.
       </p>
       <a aria-label="learn more about us" class="cs-button-solid" href="">Learn More</a>
     </div>
@@ -188,6 +188,66 @@
        class="cs-graphic cs-dark" decoding="async"
        height="161" loading="lazy"
        src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/dark-mode-splatter2.svg" width="1920">
+</section>
+
+<!-- ============================================ -->
+<!--                   Gallery                    -->
+<!-- ============================================ -->
+
+<section id="gallery-1152">
+  <div class="cs-container">
+    <div class="cs-content">
+      <span class="cs-topper">New Additions</span>
+      <h2 class="cs-title">Brand New Models</h2>
+    </div>
+    <div class="cs-gallery">
+      <!--Picture 1-->
+      <picture class="cs-image">
+        <source media="(max-width: 600px)"
+                srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/char1.jpg">
+        <source media="(min-width: 601px)"
+                srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/char1.jpg">
+        <img alt="gallery" decoding="async" height="320"
+             loading="lazy" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/char1.jpg" width="272">
+      </picture>
+      <!--Picture 2-->
+      <picture class="cs-image">
+        <source media="(max-width: 600px)"
+                srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/char2.jpg">
+        <source media="(min-width: 601px)"
+                srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/char2.jpg">
+        <img alt="gallery" decoding="async" height="320"
+             loading="lazy" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/char2.jpg" width="272">
+      </picture>
+      <!--Picture 3-->
+      <picture class="cs-image">
+        <source media="(max-width: 600px)"
+                srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/char3.jpg">
+        <source media="(min-width: 601px)"
+                srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/char3.jpg">
+        <img alt="gallery" decoding="async" height="320"
+             loading="lazy" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/char3.jpg" width="272">
+      </picture>
+      <!--Picture 4-->
+      <picture class="cs-image">
+        <source media="(max-width: 600px)"
+                srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/char4.jpg">
+        <source media="(min-width: 601px)"
+                srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/char4.jpg">
+        <img alt="gallery" decoding="async" height="320"
+             loading="lazy" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/char4.jpg" width="272">
+      </picture>
+      <!--Picture 5-->
+      <picture class="cs-image">
+        <source media="(max-width: 600px)"
+                srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/char5.jpg">
+        <source media="(min-width: 601px)"
+                srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/char5.jpg">
+        <img alt="gallery" decoding="async" height="320"
+             loading="lazy" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/char5.jpg" width="272">
+      </picture>
+    </div>
+  </div>
 </section>
 
 
