Made Gallery 3 images only

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="styles/dark.css" rel="stylesheet"/>
   <link href="styles/hero.css" rel="stylesheet"/>
   <link href="styles/sbsr_hero.css" rel="stylesheet"/>
-  <link href="styles/new_additions_gallery.css" rel="stylesheet"/>
+  <link href="styles/gallery.css" rel="stylesheet"/>
   
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
@@ -197,8 +197,8 @@
 <section id="gallery-1152">
   <div class="cs-container">
     <div class="cs-content">
-      <span class="cs-topper">New Additions</span>
-      <h2 class="cs-title">Brand New Models</h2>
+      <span class="cs-topper">Our Portfolio</span>
+      <h2 class="cs-title">Our Photo Gallery</h2>
     </div>
     <div class="cs-gallery">
       <!--Picture 1-->
@@ -227,24 +227,6 @@
                 srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/char3.jpg">
         <img alt="gallery" decoding="async" height="320"
              loading="lazy" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/char3.jpg" width="272">
-      </picture>
-      <!--Picture 4-->
-      <picture class="cs-image">
-        <source media="(max-width: 600px)"
-                srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/char4.jpg">
-        <source media="(min-width: 601px)"
-                srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/char4.jpg">
-        <img alt="gallery" decoding="async" height="320"
-             loading="lazy" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/char4.jpg" width="272">
-      </picture>
-      <!--Picture 5-->
-      <picture class="cs-image">
-        <source media="(max-width: 600px)"
-                srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/char5.jpg">
-        <source media="(min-width: 601px)"
-                srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/char5.jpg">
-        <img alt="gallery" decoding="async" height="320"
-             loading="lazy" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/char5.jpg" width="272">
       </picture>
     </div>
   </div>
