--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
   <div class="cs-container">
     <div class="cs-content">
       <span class="cs-topper">New Additions</span>
-      <h2 class="cs-title">Brand New Merchandise</h2>
+      <h2 class="cs-title">Brand New Models</h2>
     </div>
     <div class="cs-gallery">
       <!--Picture 1-->
