Added color and transition to categories

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="styles/sbsr_hero.css" rel="stylesheet"/>
   <link href="styles/gallery.css" rel="stylesheet"/>
   <link href="styles/gallery_button.css" rel="stylesheet"/>
+  <link href="styles/categories.css" rel="stylesheet"/>
   
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
@@ -274,6 +275,144 @@
           </svg>
         </a>
       </div>
+    </div>
+  </div>
+</section>
+
+<!-- ============================================ -->
+<!--                  Services                    -->
+<!-- ============================================ -->
+
+<!--<section id="services-281">-->
+<!--  <div class="cs-container">-->
+<!--    <div class="cs-content">-->
+<!--      <h2 class="cs-title">Looking for something different?</h2>-->
+<!--      <div class="cs-flex">-->
+<!--        <p class="cs-text">-->
+<!--          We provide a list of categories available to choose from right at your fingertips-->
+<!--        </p>-->
+<!--        <a class="cs-link" href="">See all categories-->
+<!--          &lt;!&ndash; Arrow SVG &ndash;&gt;-->
+<!--          <svg fill="none" height="20" viewBox="0 0 20 20" width="20" xmlns="http://www.w3.org/2000/svg">-->
+<!--            <g clip-path="url(#clip0_1_114)">-->
+<!--              <path-->
+<!--                d="M4.16667 10.8333H13.475L9.40833 14.9C9.08333 15.225 9.08333 15.7583 9.40833 16.0833C9.73333 16.4083 10.2583 16.4083 10.5833 16.0833L16.075 10.5917C16.4 10.2667 16.4 9.74167 16.075 9.41667L10.5917 3.91667C10.2667 3.59167 9.74167 3.59167 9.41667 3.91667C9.09167 4.24167 9.09167 4.76667 9.41667 5.09167L13.475 9.16667H4.16667C3.70833 9.16667 3.33333 9.54167 3.33333 10C3.33333 10.4583 3.70833 10.8333 4.16667 10.8333Z"-->
+<!--                fill="#1A1A1A"/>-->
+<!--            </g>-->
+<!--            <defs>-->
+<!--              <clipPath id="clip0_1_114-281-281">-->
+<!--                <rect fill="white" height="20" width="20"/>-->
+<!--              </clipPath>-->
+<!--            </defs>-->
+<!--          </svg>-->
+<!--        </a>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--    <ul class="cs-card-group">-->
+<!--      <li class="cs-item">-->
+<!--        <img alt="svg icon" aria-hidden="true" class="cs-icon"-->
+<!--             decoding="async" height="29" loading="lazy"-->
+<!--             src="https://csimg.nyc3.digitaloceanspaces.com/Services/shirt-solid.svg" width="37">-->
+<!--        <h3 class="cs-h3">Pre-Order</h3>-->
+<!--        <p class="cs-item-text">-->
+<!--          New and exciting models coming soon.-->
+<!--        </p>-->
+<!--      </li>-->
+<!--      <li class="cs-item">-->
+<!--        <img alt="svg icon" aria-hidden="true" class="cs-icon"-->
+<!--             decoding="async" height="29" loading="lazy"-->
+<!--             src="https://csimg.nyc3.digitaloceanspaces.com/Services/ruler-solid.svg" width="29">-->
+<!--        <h3 class="cs-h3">Brands</h3>-->
+<!--        <p class="cs-item-text">-->
+<!--          Search by your favourite model brands.-->
+<!--        </p>-->
+<!--      </li>-->
+<!--      <li class="cs-item">-->
+<!--        <img alt="svg icon" aria-hidden="true"-->
+<!--             class="cs-icon" decoding="async" height="30"-->
+<!--             loading="lazy" src="https://csimg.nyc3.digitaloceanspaces.com/Services/fill-drip-solid.svg" width="33">-->
+<!--        <h3 class="cs-h3">Limited Offers</h3>-->
+<!--        <p class="cs-item-text">-->
+<!--          Special Deals for models.-->
+<!--        </p>-->
+<!--      </li>-->
+<!--      <li class="cs-item">-->
+<!--        <img alt="svg icon" aria-hidden="true"-->
+<!--             class="cs-icon" decoding="async" height="30"-->
+<!--             loading="lazy" src="https://csimg.nyc3.digitaloceanspaces.com/Services/boxes-packing.svg" width="37">-->
+<!--        <h3 class="cs-h3">Merchandise</h3>-->
+<!--        <p class="cs-item-text">-->
+<!--          Other items for collectors and fans.-->
+<!--        </p>-->
+<!--      </li>-->
+<!--    </ul>-->
+<!--  </div>-->
+<!--</section>-->
+
+<section id="services-281">
+  <div class="cs-container">
+    <div class="cs-content">
+      <h2 class="cs-title">Looking for something different?</h2>
+      <div class="cs-flex">
+        <p class="cs-text">
+          We provide a list of categories available to choose from right at your fingertips
+        </p>
+        <a class="cs-link" href="">See all categories
+          <!-- Arrow SVG -->
+          <svg fill="none" height="20" viewBox="0 0 20 20" width="20" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_1_114)">
+              <path
+                d="M4.16667 10.8333H13.475L9.40833 14.9C9.08333 15.225 9.08333 15.7583 9.40833 16.0833C9.73333 16.4083 10.2583 16.4083 10.5833 16.0833L16.075 10.5917C16.4 10.2667 16.4 9.74167 16.075 9.41667L10.5917 3.91667C10.2667 3.59167 9.74167 3.59167 9.41667 3.91667C9.09167 4.24167 9.09167 4.76667 9.41667 5.09167L13.475 9.16667H4.16667C3.70833 9.16667 3.33333 9.54167 3.33333 10C3.33333 10.4583 3.70833 10.8333 4.16667 10.8333Z"
+                fill="#1A1A1A"/>
+            </g>
+            <defs>
+              <clipPath id="clip0_1_114-281-281">
+                <rect fill="white" height="20" width="20"/>
+              </clipPath>
+            </defs>
+          </svg>
+        </a>
+      </div>
+    </div>
+    <div class="cs-card-group-wrapper">
+      <ul class="cs-card-group">
+        <li class="cs-item">
+          <img alt="svg icon" aria-hidden="true" class="cs-icon"
+               decoding="async" height="29" loading="lazy"
+               src="images/order.png" width="37">
+          <h3 class="cs-h3">Pre-Order</h3>
+          <p class="cs-item-text">
+            New and exciting models coming soon.
+          </p>
+        </li>
+        <li class="cs-item">
+          <img alt="svg icon" aria-hidden="true" class="cs-icon"
+               decoding="async" height="29" loading="lazy"
+               src="images/brand.png" width="29">
+          <h3 class="cs-h3">Brands</h3>
+          <p class="cs-item-text">
+            Search by your favourite model brands.
+          </p>
+        </li>
+        <li class="cs-item">
+          <img alt="svg icon" aria-hidden="true"
+               class="cs-icon" decoding="async" height="30"
+               loading="lazy" src="images/discount.png" width="33">
+          <h3 class="cs-h3">Limited Offers</h3>
+          <p class="cs-item-text">
+            Special Deals for models.
+          </p>
+        </li>
+        <li class="cs-item">
+          <img alt="svg icon" aria-hidden="true"
+               class="cs-icon" decoding="async" height="30"
+               loading="lazy" src="images/gift.png" width="37">
+          <h3 class="cs-h3">Merchandise</h3>
+          <p class="cs-item-text">
+            Other items for collectors and fans.
+          </p>
+        </li>
+      </ul>
     </div>
   </div>
 </section>
