--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link href="styles/gallery.css" rel="stylesheet"/>
   <link href="styles/gallery_button.css" rel="stylesheet"/>
   <link href="styles/categories.css" rel="stylesheet"/>
+  <link href="styles/footer.css" rel="stylesheet"/>
   
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
@@ -283,72 +284,6 @@
 <!--                  Services                    -->
 <!-- ============================================ -->
 
-<!--<section id="services-281">-->
-<!--  <div class="cs-container">-->
-<!--    <div class="cs-content">-->
-<!--      <h2 class="cs-title">Looking for something different?</h2>-->
-<!--      <div class="cs-flex">-->
-<!--        <p class="cs-text">-->
-<!--          We provide a list of categories available to choose from right at your fingertips-->
-<!--        </p>-->
-<!--        <a class="cs-link" href="">See all categories-->
-<!--          &lt;!&ndash; Arrow SVG &ndash;&gt;-->
-<!--          <svg fill="none" height="20" viewBox="0 0 20 20" width="20" xmlns="http://www.w3.org/2000/svg">-->
-<!--            <g clip-path="url(#clip0_1_114)">-->
-<!--              <path-->
-<!--                d="M4.16667 10.8333H13.475L9.40833 14.9C9.08333 15.225 9.08333 15.7583 9.40833 16.0833C9.73333 16.4083 10.2583 16.4083 10.5833 16.0833L16.075 10.5917C16.4 10.2667 16.4 9.74167 16.075 9.41667L10.5917 3.91667C10.2667 3.59167 9.74167 3.59167 9.41667 3.91667C9.09167 4.24167 9.09167 4.76667 9.41667 5.09167L13.475 9.16667H4.16667C3.70833 9.16667 3.33333 9.54167 3.33333 10C3.33333 10.4583 3.70833 10.8333 4.16667 10.8333Z"-->
-<!--                fill="#1A1A1A"/>-->
-<!--            </g>-->
-<!--            <defs>-->
-<!--              <clipPath id="clip0_1_114-281-281">-->
-<!--                <rect fill="white" height="20" width="20"/>-->
-<!--              </clipPath>-->
-<!--            </defs>-->
-<!--          </svg>-->
-<!--        </a>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--    <ul class="cs-card-group">-->
-<!--      <li class="cs-item">-->
-<!--        <img alt="svg icon" aria-hidden="true" class="cs-icon"-->
-<!--             decoding="async" height="29" loading="lazy"-->
-<!--             src="https://csimg.nyc3.digitaloceanspaces.com/Services/shirt-solid.svg" width="37">-->
-<!--        <h3 class="cs-h3">Pre-Order</h3>-->
-<!--        <p class="cs-item-text">-->
-<!--          New and exciting models coming soon.-->
-<!--        </p>-->
-<!--      </li>-->
-<!--      <li class="cs-item">-->
-<!--        <img alt="svg icon" aria-hidden="true" class="cs-icon"-->
-<!--             decoding="async" height="29" loading="lazy"-->
-<!--             src="https://csimg.nyc3.digitaloceanspaces.com/Services/ruler-solid.svg" width="29">-->
-<!--        <h3 class="cs-h3">Brands</h3>-->
-<!--        <p class="cs-item-text">-->
-<!--          Search by your favourite model brands.-->
-<!--        </p>-->
-<!--      </li>-->
-<!--      <li class="cs-item">-->
-<!--        <img alt="svg icon" aria-hidden="true"-->
-<!--             class="cs-icon" decoding="async" height="30"-->
-<!--             loading="lazy" src="https://csimg.nyc3.digitaloceanspaces.com/Services/fill-drip-solid.svg" width="33">-->
-<!--        <h3 class="cs-h3">Limited Offers</h3>-->
-<!--        <p class="cs-item-text">-->
-<!--          Special Deals for models.-->
-<!--        </p>-->
-<!--      </li>-->
-<!--      <li class="cs-item">-->
-<!--        <img alt="svg icon" aria-hidden="true"-->
-<!--             class="cs-icon" decoding="async" height="30"-->
-<!--             loading="lazy" src="https://csimg.nyc3.digitaloceanspaces.com/Services/boxes-packing.svg" width="37">-->
-<!--        <h3 class="cs-h3">Merchandise</h3>-->
-<!--        <p class="cs-item-text">-->
-<!--          Other items for collectors and fans.-->
-<!--        </p>-->
-<!--      </li>-->
-<!--    </ul>-->
-<!--  </div>-->
-<!--</section>-->
-
 <section id="services-281">
   <div class="cs-container">
     <div class="cs-content">
@@ -416,6 +351,158 @@
     </div>
   </div>
 </section>
+
+<!--&lt;!&ndash; ============================================ &ndash;&gt;-->
+<!--&lt;!&ndash;                   Footer                     &ndash;&gt;-->
+<!--&lt;!&ndash; ============================================ &ndash;&gt;-->
+
+<!--<footer id="cs-footer-269">-->
+<!--  <div class="cs-container">-->
+<!--    &lt;!&ndash; Logo Group &ndash;&gt;-->
+<!--    <div class="cs-logo-group">-->
+<!--      <a aria-label="go back to home" class="cs-logo" href="">-->
+<!--        <img alt="logo" aria-hidden="true" class="cs-logo-img light" decoding="async"-->
+<!--             height="32" loading="lazy" src="images/JaysModels-logo.png.webp"-->
+<!--             width="240">-->
+<!--      </a>-->
+<!--<p class="cs-text">-->
+<!--  We are Melbourne's Diecast Model Specialists. Come and visit our showroom at 2A Kennaugh St, Oakleigh East-->
+<!--  Victoria Australia.-->
+<!--</p>-->
+<!--    </div>-->
+<!--    &lt;!&ndash; Links &ndash;&gt;-->
+<!--    <ul class="cs-nav">-->
+<!--      <li class="cs-nav-li">-->
+<!--        <span class="cs-header">Sitemap</span>-->
+<!--      </li>-->
+<!--      <li class="cs-nav-li">-->
+<!--        <a class="cs-nav-link" href="">Home</a>-->
+<!--      </li>-->
+<!--      <li class="cs-nav-li">-->
+<!--        <a class="cs-nav-link" href="">About</a>-->
+<!--      </li>-->
+<!--      <li class="cs-nav-li">-->
+<!--        <a class="cs-nav-link" href="">Services</a>-->
+<!--      </li>-->
+<!--      <li class="cs-nav-li">-->
+<!--        <a class="cs-nav-link" href="">Portfolio</a>-->
+<!--      </li>-->
+<!--      <li class="cs-nav-li">-->
+<!--        <a class="cs-nav-link" href="">Contact</a>-->
+<!--      </li>-->
+<!--    </ul>-->
+<!--    &lt;!&ndash; Contact Info &ndash;&gt;-->
+<!--    <ul class="cs-contact">-->
+<!--      <li class="cs-nav-li">-->
+<!--        <span class="cs-header">Contact</span>-->
+<!--      </li>-->
+<!--      <li class="cs-contact-li">-->
+<!--        <a class="cs-contact-link" href="tel: 123-456-7890">(123) 456-7890</a>-->
+<!--      </li>-->
+<!--      <li class="cs-contact-li">-->
+<!--        <a class="cs-contact-link" href="mailto:info@codestitch.com">info@codestitch.com</a>-->
+<!--      </li>-->
+<!--      &lt;!&ndash; Social Media &ndash;&gt;-->
+<!--      <li class="cs-contact-li cs-social-group">-->
+<!--        <div class="cs-social">-->
+<!--          <a aria-label="visit google profile" class="cs-social-link" href="">-->
+<!--            <img alt="google" aria-hidden="true" class="cs-social-img" decoding="async"-->
+<!--                 height="11" loading="lazy" src="https://csimg.nyc3.digitaloceanspaces.com/Social/google.svg"-->
+<!--                 width="11">-->
+<!--          </a>-->
+<!--          <a aria-label="visit facebook profile" class="cs-social-link" href="">-->
+<!--            <img alt="facebook" aria-hidden="true" class="cs-social-img" decoding="async"-->
+<!--                 height="11" loading="lazy" src="https://csimg.nyc3.digitaloceanspaces.com/Social/Facebook.svg"-->
+<!--                 width="6">-->
+<!--          </a>-->
+<!--          <a aria-label="visit instagram profile" class="cs-social-link" href="">-->
+<!--            <img alt="instagram" aria-hidden="true" class="cs-social-img" decoding="async"-->
+<!--                 height="11" loading="lazy" src="https://csimg.nyc3.digitaloceanspaces.com/Social/instagram.svg"-->
+<!--                 width="11">-->
+<!--          </a>-->
+<!--        </div>-->
+<!--      </li>-->
+<!--    </ul>-->
+<!--  </div>-->
+<!--</footer>-->
+
+<!-- ============================================ -->
+<!--                   Footer                     -->
+<!-- ============================================ -->
+
+<footer id="cs-footer-274">
+  <div class="cs-container">
+    <!-- Logo Group -->
+    <div class="cs-logo-group">
+      <a aria-label="go back to home" class="cs-logo" href="">
+        <!-- Remove the light class if you don't need the dark logo -->
+        <img alt="logo" aria-hidden="true" class="cs-logo-img" decoding="async"
+             height="32" loading="lazy" src="images/JaysModels-logo.png.webp" width="240">
+      </a>
+      
+      <div class="cs-social">
+        <a aria-label="visit google profile" class="cs-social-link" href="">
+          <img alt="google" aria-hidden="true" class="cs-social-img" decoding="async"
+               height="11" loading="lazy" src="https://csimg.nyc3.digitaloceanspaces.com/Social/google.svg" width="11">
+        </a>
+        <a aria-label="visit facebook profile" class="cs-social-link" href="">
+          <img alt="facebook" aria-hidden="true" class="cs-social-img" decoding="async"
+               height="11" loading="lazy" src="https://csimg.nyc3.digitaloceanspaces.com/Social/Facebook.svg" width="6">
+        </a>
+        <a aria-label="visit instagram profile" class="cs-social-link" href="">
+          <img alt="instagram" aria-hidden="true" class="cs-social-img" decoding="async"
+               height="11" loading="lazy" src="https://csimg.nyc3.digitaloceanspaces.com/Social/instagram.svg"
+               width="11">
+        </a>
+      </div>
+    </div>
+    <!-- Links -->
+    <ul class="cs-nav">
+      <li class="cs-nav-li">
+        <span class="cs-header">Information</span>
+      </li>
+      <li class="cs-nav-li">
+        <a class="cs-nav-link" href="tel:123-456 7890">Faqs</a>
+      </li>
+      <li class="cs-nav-li">
+        <a class="cs-nav-link" href="tel:123-456 7890">About</a>
+      </li>
+      <li class="cs-nav-li">
+        <a class="cs-nav-link" href="mailto:info@codestitch.com">Payments and Shipping</a>
+      </li>
+      <li class="cs-nav-li">
+        <a class="cs-nav-link" href="mailto:info@codestitch.com">Terms and Conditions</a>
+      </li>
+      <li class="cs-nav-li">
+        <a class="cs-nav-link" href="mailto:info@codestitch.com">Privacy Policy</a>
+      </li>
+    </ul>
+    <ul class="cs-nav">
+      <li class="cs-nav-li">
+        <span class="cs-header">Address</span>
+      </li>
+      <li class="cs-nav-li">
+        <a class="cs-nav-link" href="">2A Kennaugh St,<br>Oakleigh East Victoria Australia</a>
+      </li>
+    </ul>
+    <!-- Contact Info -->
+    <ul class="cs-nav">
+      <li class="cs-nav-li">
+        <span class="cs-header">Extras</span>
+      </li>
+      <li class="cs-nav-li">
+        Brands
+      </li>
+      <li class="cs-nav-li">
+        Specials
+      </li>
+      <li class="cs-nav-li">
+        Gift Ideas
+      </li>
+    </ul>
+  </div>
+</footer>
+
 
 <script src="javascript/header.js"></script>
 <script src="javascript/dark.js"></script>
