--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
-  
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
   <link
     href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
@@ -150,7 +147,7 @@
 </section>
 
 <!-- ============================================ -->
-<!--             Side By Side Reverse             -->
+<!--  (Model of the day)Side By Side Reverse      -->
 <!-- ============================================ -->
 
 <section id="sbsr-1810">
